fixed the cate slider height on mobile view

--- a/components/carousel/Carousel.module.css
+++ b/components/carousel/Carousel.module.css
@@ -54,7 +54,7 @@
   height: 40px;
   display: flex;
   align-items: center;
-  z-index: 999;
+  z-index: 995;
   width: 40px;
   top: -58px;
   display: flex;
